--- a/src/styles/heroEl/main.css
+++ b/src/styles/heroEl/main.css
@@ -31,7 +31,7 @@
   font-size: large;
 }
 /* button heroes */
-.hero-element > .info > button {
+.hero-element > .info > a {
   background-color: var(--main-400);
   padding: 1em;
   border-radius: 15px;
