feat: add list post
- styling card
- add component
- add split description
- add event img

--- a/src/components/heroEl/main.css
+++ b/src/components/heroEl/main.css
@@ -32,6 +32,8 @@
 }
 /* button heroes */
 .hero-element > .info > a {
+  display: block;
+  width:max-content;
   background-color: var(--main-400);
   padding: 1em;
   border-radius: 15px;
