--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <meta charset="UTF-8" />
     <title>Restaurant Apps Starter Project</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="detail-content-root"></div>
   </body>
 </html>
