--- a/src/components/contentList/detail/main.css
+++ b/src/components/contentList/detail/main.css
@@ -8,14 +8,14 @@
   background-color: rgb(0, 0, 0, .8);
 }
 .pembungkus {
-  width: fit-content;
+  width:90vw;
   max-width: 1080px;
   max-height: 80vh;
   margin: auto;
   padding:1rem;
   border-radius: 15px;
   background-color: var(--main-200);
-  overflow:auto;
+  overflow-y:auto;
 }
 .pembungkus button{
   background-color: var(--main-400);
