--- a/src/components/heroEl/main.css
+++ b/src/components/heroEl/main.css
@@ -4,7 +4,7 @@
 /* image hero */
 .hero-element img {
   max-width: 100%;
-  width: max-content;
+  width: 100%;
   height: 80vh;
   object-fit: cover;
   object-position: bottom;
