--- a/src/components/contentList/main.css
+++ b/src/components/contentList/main.css
@@ -29,7 +29,7 @@
   border-radius: 15px;
   object-fit: cover;
   object-position: center;
-  transition:.5s;
+  transition: 0.5s;
 }
 .content > .card > .cover-image:hover img {
   opacity: 0.5;
@@ -55,10 +55,12 @@
   border-radius: 15px;
   background-color: var(--main-300);
   cursor: pointer;
-  transition:.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 /* show btn detail */
-.content > .card > .cover-image:hover button {
+.content > .card > .cover-image:hover button,
+.content > .card > .cover-image button:focus,
+.content > .card > .cover-image button:active {
   opacity: 1;
 }
 /* rating */
