--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -1,7 +1,7 @@
 :root {
-  --main-100: #E8D7F1;
-  --main-200: #D3BCCC;
-  --main-300: #A167A5;
-  --main-400: #4A306D;
-  --main-500: #0E273C;
+  --main-100: rgb(224,222,228);
+  --main-200: rgb(191, 183 ,202);
+  --main-300: rgb(107,86,135);
+  --main-400: rgb(74,48,109);
+  --main-500: rgb(59,38,87);
 }
