--- a/src/components/contentList/mobile.css
+++ b/src/components/contentList/mobile.css
@@ -3,6 +3,13 @@
   .content {
     grid-template-columns: auto auto;
   }
+  .rating{
+    display: block;
+    height: auto;
+  }
+.rating .right,.review-container{
+    margin-left:0;
+  }
 }
 @media only screen and (max-width: 600px) {
   .content {
