--- a/src/components/contentList/detail/bottom/review/main.css
+++ b/src/components/contentList/detail/bottom/review/main.css
@@ -5,8 +5,10 @@
   border-radius: 15px;
   color:var(--main-100);
   margin-left:auto;
+  margin-bottom: 1rem;
 }
 .review-head{
   margin-bottom: 1rem;
   font-weight: bold;
 }
+
