--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="detail-content-root"></div>
+    <div tabindex="0" id="detail-content-root" ></div>
   </body>
 </html>
