--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link rel="manifest" href="/app.webmanifest" />
+    <meta name="theme-color" content="#DB0000" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="icon" href="./favicon.ico" />
     <meta charset="UTF-8" />
     <title>Restaurant Apps Starter Project</title>
   </head>
