--- a/src/scripts/pages/detail/style/main.css
+++ b/src/scripts/pages/detail/style/main.css
@@ -1,21 +1,9 @@
-#detail-restaurant {
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding: 1rem;
-  width: 100%;
-  height: 100vh;
-  z-index: 99;
-  background-color: rgb(0, 0, 0, .8);
-}
 .pembungkus {
   width:90vw;
-  max-width: 1080px;
-  max-height: 80vh;
+  max-width: 95%;
   margin: auto;
   padding:1rem;
   border-radius: 15px;
-  background-color: var(--main-200);
   overflow-y:auto;
 }
 .pembungkus button{
