--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,6 +14,7 @@
     <title>Restaurant Apps Starter Project</title>
   </head>
   <body>
+    <a href="#title-list" class="skip-link">Menuju ke konten</a>
     <div id="root"></div>
     <div tabindex="0" id="detail-content-root" ></div>
   </body>
