--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/app.webmanifest" />
     <meta name="theme-color" content="#DB0000" />
     <link rel="apple-touch-icon" href="/icons/icon-192.png" />
@@ -15,6 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <div tabindex="0" id="detail-content-root" ></div>
+    <div tabindex="0" id="detail-content-root"></div>
   </body>
 </html>
